@@ -1,6 +1,8 @@
 package com.project.kisan_setu.service.impl;
 
 import com.project.kisan_setu.dto.*;
+import com.project.kisan_setu.embedded.ListingCertificate;
+import com.project.kisan_setu.embedded.ListingImage;
 import com.project.kisan_setu.entity.Bid;
 import com.project.kisan_setu.entity.BidHistory;
 import com.project.kisan_setu.entity.Listing;
@@ -10,6 +12,7 @@ import com.project.kisan_setu.enums.SaleType;
 import com.project.kisan_setu.exception.UserException;
 import com.project.kisan_setu.mapper.ListingMapper;
 import com.project.kisan_setu.repository.*;
+import com.project.kisan_setu.service.FileStorageService;
 import com.project.kisan_setu.service.ListingService;
 import com.project.kisan_setu.service.NotificationService;
 import org.slf4j.Logger;
@@ -17,10 +20,16 @@ import org.slf4j.LoggerFactory;
 import org.springframework.security.core.Authentication;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Service;
+import org.springframework.web.multipart.MultipartFile;
 
+import java.io.IOException;
 import java.math.BigDecimal;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.time.LocalDateTime;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 public class ListingServiceImpl implements ListingService {
@@ -30,172 +39,185 @@ public class ListingServiceImpl implements ListingService {
     private final UserRepository userRepository;
     private final BidRepository bidRepository;
     private final NotificationService notificationService;
+    private final FileStorageService fileStorageService;
     private static final Logger logger = LoggerFactory.getLogger(ListingServiceImpl.class);
 
-    public ListingServiceImpl(ListingRepository listingRepository, BidHistoryRepository bidHistoryRepository, UserRepository userRepository, BidRepository bidRepository,  NotificationService notificationService) {
+    public ListingServiceImpl(ListingRepository listingRepository, BidHistoryRepository bidHistoryRepository, UserRepository userRepository, BidRepository bidRepository, NotificationService notificationService, FileStorageService fileStorageService) {
         this.listingRepository = listingRepository;
         this.bidHistoryRepository = bidHistoryRepository;
         this.userRepository = userRepository;
         this.bidRepository = bidRepository;
         this.notificationService = notificationService;
 
+        this.fileStorageService = fileStorageService;
     }
 
+    //  CREATE LISTING
     @Override
-    public ListingResponseDto createListing(
-            ProductListingDto productDto,
-            QualityPricingListingDto pricingDto,
-            QualityLocationListingDto locationDto) {
+    public ListingResponseDto createListing(CreateListingRequest request,
+                                            List<MultipartFile> imageFiles,
+                                            MultipartFile certificateFile) {
 
-        logger.info("Creating listing for product: {}",
-                productDto.getCropName());
+        ProductListingDto productDto = request.getProduct();
+        QualityPricingListingDto pricingDto = request.getPricing();
+        QualityLocationListingDto locationDto = request.getLocation();
 
+        // Validate pricing
+        validatePricing(pricingDto);
 
-        // Basic Validation
-        if (pricingDto.getQuantity() == null ||
-                pricingDto.getQuantity() <= 0) {
-
-            throw new UserException(
-                    "Quantity must be greater than 0");
+        // Map images
+        List<ListingImage> images = null;
+        if (imageFiles != null && !imageFiles.isEmpty()) {
+            images = imageFiles.stream().map(file -> {
+                String path = fileStorageService.storeFile(file, "images");
+                ListingImage image = new ListingImage();
+                image.setFileName(file.getOriginalFilename());
+                image.setFilePath(path);
+                image.setFileType(file.getContentType());
+                image.setIsPrimary(false); // frontend can later send primary info if needed
+                return image;
+            }).collect(Collectors.toList());
         }
 
-        if (pricingDto.getPricePerKg() == null ||
-                pricingDto.getPricePerKg() <= 0) {
-
-            throw new UserException(
-                    "PricePerKg must be greater than 0");
-        }
-        // SaleTypee
-        if (pricingDto.getSaleType() == SaleType.AUCTION) {
-            if (pricingDto.getAuctionEndTime() == null) {
-                throw new UserException(
-                        "Auction End Time required");
-            }
-            if (pricingDto.getMinimumBidIncrement() == null ||
-                    pricingDto.getMinimumBidIncrement() <= 0) {
-
-                throw new UserException(
-                        "Minimum Bid Increment required");
-            }
-            //Auction timecycle
-            if (pricingDto.getAuctionEndTime()
-                    .isBefore(LocalDateTime.now())) {
-
-                throw new UserException(
-                        "Auction End Time must be future");
-            }
-
-            logger.info("Auction Listing Created");
+        //Map certificate
+        ListingCertificate certificate = null;
+        if (certificateFile != null && !certificateFile.isEmpty()) {
+            String path = fileStorageService.storeFile(certificateFile, "certificates");
+            certificate = new ListingCertificate();
+            certificate.setFileName(certificateFile.getOriginalFilename());
+            certificate.setFilePath(path);
+            certificate.setFileType(certificateFile.getContentType());
         }
 
-        // FIXED PRICE
-        else if (pricingDto.getSaleType() == SaleType.FIXED) {
+        // Map entity
+        Listing listing = ListingMapper.toEntity(productDto, pricingDto, locationDto, images, certificate);
 
-            // Remove Auction Fields
-            pricingDto.setAuctionEndTime(null);
-            pricingDto.setMinimumBidIncrement(null);
-            logger.info("Fixed Price Listing Created");
-        }
-        else {
-            throw new UserException(
-                    "SaleType must be AUCTION or FIXED");
-        }
-
-        if ("Partial Orders Allowed"
-                .equalsIgnoreCase(pricingDto.getPurchaseType())) {
-
-            // Partial Order Required Fields
-
-            if (pricingDto.getMinimumOrderQuantity() == null
-                    || pricingDto.getMinimumOrderQuantity() <= 0) {
-
-                throw new UserException(
-                        "Minimum Order Quantity required");
-            }
-            if (pricingDto.getMoqPricePerKg() == null
-                    || pricingDto.getMoqPricePerKg() <= 0) {
-
-                throw new UserException(
-                        "MOQ PricePerKg required");
-            }
-            logger.info("Partial Order Listing");
-
-        }
-        // Whole Lot
-        else {
-
-            pricingDto.setMinimumOrderQuantity(null);
-
-            pricingDto.setMoqPricePerKg(null);
-
-
-            logger.info("Whole Lot Listing");
-
-        }
-
-        Listing listing = ListingMapper.toEntity(
-                productDto,
-                pricingDto,
-                locationDto);
-
-        Authentication authentication =
-                SecurityContextHolder
-                        .getContext()
-                        .getAuthentication();
-
-        String email = authentication.getName();
-        User seller =
-                userRepository.findByEmail(email)
-                        .orElseThrow(() ->
-                                new RuntimeException("User not found"));
-
+        //  Set seller & status
+        Authentication auth = SecurityContextHolder.getContext().getAuthentication();
+        String email = auth.getName();
+        User seller = userRepository.findByEmail(email)
+                .orElseThrow(() -> new RuntimeException("User not found"));
         listing.setSeller(seller);
-        // Auction starts when published
         listing.setStatus(AuctionStatus.ACTIVE);
 
-        Listing saved =
-                listingRepository.save(listing);
+        // Save
+        Listing saved = listingRepository.save(listing);
 
-        logger.info("Listing Created Successfully ID: {}",
-                saved.getListingId());
         notificationService.createNotification(seller.getUserId(), "Crop Created Successfully");
+        logger.info("Listing Created Successfully ID: {}", saved.getListingId());
 
         return ListingMapper.toResponse(saved);
+    }
 
+    // UPDATE LISTING
+    @Override
+    public ListingResponseDto updateListing(Long listingId,
+                                            CreateListingRequest request,
+                                            List<MultipartFile> imageFiles,
+                                            MultipartFile certificateFile) {
+
+        Listing listing = listingRepository.findById(listingId)
+                .orElseThrow(() -> new UserException("Listing not found with id: " + listingId));
+
+        ProductListingDto productDto = request.getProduct();
+        QualityPricingListingDto pricingDto = request.getPricing();
+        QualityLocationListingDto locationDto = request.getLocation();
+
+        // Validate pricing
+        validatePricing(pricingDto);
+
+        // Update basic fields
+        ListingMapper.updateEntity(listing, productDto, pricingDto, locationDto);
+
+        // Update images if new files provided
+        if (imageFiles != null && !imageFiles.isEmpty()) {
+            List<ListingImage> updatedImages = imageFiles.stream().map(file -> {
+                String path = fileStorageService.storeFile(file, "images");
+                ListingImage image = new ListingImage();
+                image.setFileName(file.getOriginalFilename());
+                image.setFilePath(path);
+                image.setFileType(file.getContentType());
+                image.setIsPrimary(false);
+                return image;
+            }).collect(Collectors.toList());
+
+            listing.getImages().clear();
+            listing.setImages(updatedImages);
+        }
+
+        // Update certificate if new file provided
+        if (certificateFile != null && !certificateFile.isEmpty()) {
+            // Delete old file (optional)
+            if (listing.getCertificate() != null) {
+                deletePhysicalFile(listing.getCertificate().getFilePath());
+            }
+            String path = fileStorageService.storeFile(certificateFile, "certificates");
+            ListingCertificate certificate = new ListingCertificate();
+            certificate.setFileName(certificateFile.getOriginalFilename());
+            certificate.setFilePath(path);
+            certificate.setFileType(certificateFile.getContentType());
+            listing.setCertificate(certificate);
+        }
+
+        Listing updated = listingRepository.save(listing);
+        logger.info("Listing Updated Successfully ID: {}", updated.getListingId());
+        return ListingMapper.toResponse(updated);
+    }
+
+    // HELPER METHODS
+    private void validatePricing(QualityPricingListingDto pricingDto) {
+        if (pricingDto.getQuantity() == null || pricingDto.getQuantity() <= 0)
+            throw new UserException("Quantity must be greater than 0");
+
+        if (pricingDto.getPricePerKg() == null || pricingDto.getPricePerKg() <= 0)
+            throw new UserException("PricePerKg must be greater than 0");
+
+        if (pricingDto.getSaleType() == null)
+            throw new UserException("SaleType must be specified");
+
+        if (pricingDto.getSaleType() == SaleType.AUCTION) {
+            if (pricingDto.getAuctionEndTime() == null)
+                throw new UserException("Auction End Time required");
+            if (pricingDto.getMinimumBidIncrement() == null || pricingDto.getMinimumBidIncrement() <= 0)
+                throw new UserException("Minimum Bid Increment required");
+        } else {
+            pricingDto.setAuctionEndTime(null);
+            pricingDto.setMinimumBidIncrement(null);
+        }
+
+        if (!"Partial Orders Allowed".equalsIgnoreCase(pricingDto.getPurchaseType())) {
+            pricingDto.setMinimumOrderQuantity(null);
+            pricingDto.setMoqPricePerKg(null);
+        }
+    }
+
+    private void deletePhysicalFile(String relativePath) {
+        try {
+            java.nio.file.Path path = java.nio.file.Paths.get("uploads").resolve(relativePath);
+            java.nio.file.Files.deleteIfExists(path);
+        } catch (java.io.IOException e) {
+            logger.warn("Failed to delete file: {}", relativePath);
+        }
     }
 
     @Override
     public List<ListingResponseDto> getAllListings() {
-        logger.info("Fetching all listings");
-        return listingRepository.findAll()
-                .stream()
+        return listingRepository.findAll().stream()
                 .map(ListingMapper::toResponse)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Override
     public ListingResponseDto getListingById(Long id) {
-        logger.info("Fetching listing with ID: {}", id);
-
         Listing listing = listingRepository.findById(id)
-                .orElseThrow(() -> {
-                    logger.error("Listing not found with ID: {}", id);
-                    return new UserException("Listing not found with id: " + id);
-                });
-
+                .orElseThrow(() -> new UserException("Listing not found with id: " + id));
         return ListingMapper.toResponse(listing);
     }
 
     @Override
     public void deleteListing(Long id) {
-        logger.info("Deleting listing with ID: {}", id);
-
         Listing listing = listingRepository.findById(id)
-                .orElseThrow(() -> {
-                    logger.error("Cannot delete. Listing not found with id: {}", id);
-                    return new UserException("Listing not found with id: " + id);
-                });
-
+                .orElseThrow(() -> new UserException("Listing not found with id: " + id));
         listingRepository.delete(listing);
     }
 
@@ -205,12 +227,27 @@ public class ListingServiceImpl implements ListingService {
             QualityPricingListingDto pricingDto,
             QualityLocationListingDto locationDto) {
 
-        logger.debug("Previewing listing for product: {}", productDto.getCropName());
-        double totalBasePrice = pricingDto.getQuantity() * pricingDto.getPricePerKg();
-        pricingDto.setTotalBasePrice(totalBasePrice);
-        pricingDto.setMinimumBidIncrement(Math.ceil(totalBasePrice * 0.02));
+        logger.debug("Previewing listing for product: {}",
+                productDto.getCropName());
 
-        Listing preview = ListingMapper.toEntity(productDto, pricingDto, locationDto);
+        double totalBasePrice =
+                pricingDto.getQuantity() *
+                        pricingDto.getPricePerKg();
+
+        pricingDto.setTotalBasePrice(totalBasePrice);
+
+        pricingDto.setMinimumBidIncrement(
+                Math.ceil(totalBasePrice * 0.02)
+        );
+
+        Listing preview = ListingMapper.toEntity(
+                productDto,
+                pricingDto,
+                locationDto,
+                null,   // no images in preview
+                null    // no certificate in preview
+        );
+
         return ListingMapper.toResponse(preview);
     }
 
@@ -294,6 +331,7 @@ public class ListingServiceImpl implements ListingService {
                 top5Bids
         );
     }
+
     @Override
     public DashboardDto getSellerOverview() {
         Authentication auth =
@@ -306,21 +344,13 @@ public class ListingServiceImpl implements ListingService {
 
         Long sellerId = seller.getUserId();
 
-        Long activeListings = listingRepository.countBySellerUserIdAndStatus(sellerId,AuctionStatus.ACTIVE);
-        Long pendingApprovals = listingRepository.countBySellerUserIdAndStatus(sellerId,AuctionStatus.PENDING);
+        Long activeListings = listingRepository.countBySellerUserIdAndStatus(sellerId, AuctionStatus.ACTIVE);
+        Long pendingApprovals = listingRepository.countBySellerUserIdAndStatus(sellerId, AuctionStatus.PENDING);
         Long totalBidsReceived = bidRepository.countTotalBidsBySellerId(sellerId);
         Long totalRevenue = bidRepository.sumAmountByListingSellerId(sellerId);
 
         return new DashboardDto(activeListings, pendingApprovals, totalBidsReceived, totalRevenue);
 
 
-    }
-
-    @Override
-    public ListingResponseDto updateListing(Long listingId, ProductListingDto productDto, QualityPricingListingDto pricingDto, QualityLocationListingDto locationDto) {
-        Listing listing=listingRepository.findById(listingId).orElseThrow(()->new UserException("Listing not Found with" +listingId));
-        ListingMapper.updateEntity(listing,productDto,pricingDto,locationDto);
-        Listing saved = listingRepository.save(listing);
-        return ListingMapper.toResponse(saved);
     }
 }
